--- a/views/index.haml
+++ b/views/index.haml
@@ -21,7 +21,7 @@
       Guess
     .span7
       %input{id: 'chemical-element', placeholder: 'Guess Chemical Element'}
-  .row
+  .row.result-row
     .span8
       .result.correct{style: 'display: none'}
         %img{src: "/img/correct.png"}
