adding tweet button

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,11 +8,13 @@
   .row
     &nbsp;
   .row
-    .score.span2
+    .score.span4
       Score:
       %span.points
         0
       Points
+    .span4
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://breakingbadtrivia.heroku.com/" data-text="Play Breaking Bad Chemistry Trivia Game.">Tweet</a>
   .row
     .span8
       %h2.cast
