--- a/views/index.haml
+++ b/views/index.haml
@@ -13,8 +13,10 @@
       %span.points
         0
       Points
-    .span4
+    .span1
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://breakingbadtrivia.heroku.com/" data-text="Play Breaking Bad Chemistry Trivia Game.">Tweet</a>
+    .span1
+      <div class="fb-like" data-href="http://breakingbadtrivia.heroku.com/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
   .row
     .span8
       %h2.cast
